--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.defaultInterpreterPath": "venv\\Scripts\\python.exe"
+    "python.defaultInterpreterPath": "E:\\VirtualEnvs\\ceramic-bands-p38\\Scripts\\python.exe"
 }
