Restart supported for if the network drops out

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,14 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Python: Main (Restart)",
+            "type": "python",
+            "request": "launch",
+            "program": "main.py",
+            "console": "integratedTerminal",
+            "args": ["--restart_prefix", "2S"]
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
